refactored for cleaner code, created initial database

--- a/views/bookmark_list.erb
+++ b/views/bookmark_list.erb
@@ -2,7 +2,7 @@
 <p> Your bookmarks are: 
 <ul>
 <% @bookmarks.each do |bookmark| %>
-  <li> <%= bookmark.title %> </li>
+  <li> <%= bookmark %> </li>
   <% end %>
   </ul>
  </p>
