started to integrate database into app

--- a/views/bookmark_list.erb
+++ b/views/bookmark_list.erb
@@ -1,8 +1,4 @@
 <h1> Bookmarks </h1> 
 <p> Your bookmarks are: 
+<%=@bookmarks%>
 <ul>
-<% @bookmarks.each do |bookmark| %>
-  <li> <%= bookmark %> </li>
-  <% end %>
-  </ul>
- </p>
